test/tests/stages/9_functions/invalid_parse/decl_wrong_closing_delim.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(foo)
  (
  int
  identifier(x)
  ,
  int
  identifier(y)
  }
  {
  return
  identifier(x)
  +
  identifier(y)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
